WIP
-----------------------------
* Classes Preset
  - Extended classes preset structure to support more customization in future.
    The new structure now saves alternative "class name" under "alias" key, and "class color" under "color" key.
  - Old "classes.json" file will be auto-updated to this newer structure,
    and a "classes.json.old" backup file will be created in "settings" folder.

* Vehicle Class Editor
  - Now shows customizable classes styles in table view, including "Class name", "Alias name", "Color" columns.
  - Now supports multi-selection for deleting multiple classes.
  - Now supports classes sorting.

2.23.0 (2025-01-15)
-----------------------------
* General
  - Add "Remember Size" option in main window Config menu, which remembers last window size.
    This option is enabled by default.
  - Apply laptime pace margin after laptime pace calculation instead of before.

* Relative Widget
  - Add "show_highlighted_nearest_time_gap" option (requested by Jonathan07),
    which highlights opponents within nearest time gap threshold.
  - Add "nearest_time_gap_threshold_*" options for customizing nearest time gap threshold (in seconds).
    Default is "1" second for front, and "2" seconds for behind.
  - Add "show_time_gap_sign" option, "-" indicates opponent's relative position is in front of player,
    "+" indicates the opposite. This option is disabled by default.
  - "show_lap_difference" option no longer applies to "time gap" column to avoid confusion with
    "show_highlighted_nearest_time_gap".

* Track map Widget
  - Add "show_pitout_prediction" option (requested by David levis & Marcelo Prestes),
    which shows estimated pit out on-track position indication for each pit stop duration.
    Note, pit out position prediction is based on "delta best" data which scaled with player's latest
    "lap time pace" for accurate real-time position prediction under various track conditions.