@@ -56,6 +56,7 @@ class Realtime(DataModule):
                         filepath=userpath_energy_delta,
                         filename=combo_id,
                         extension=".energy",
+                        min_delta_distance=self.mcfg["minimum_delta_distance"],
                     )
                     # Initial run to reset module output
                     next(gen_calc_energy)
