@@ -1,5 +1,11 @@
 WIP
 -----------------------------
+* Delta, Energy, Fuel Module
+  - Add "minimum_delta_distance" option, which sets minimum recording distance (in meters) between each delta sample.
+    Lower value may result more samples recorded and bigger file size; higher value may result less samples recorded and inaccuracy.
+    Default value is "5" meters. Recommended value range in "5" to "10" meters.
+  - Improved calculation to reduce data fluctuation.
+
 * Classes Preset
   - Extended classes preset structure to support more customization in future.
     The new structure now saves alternative "class name" under "alias" key, and "class color" under "color" key.
